@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Documentation]
+  - Added a ROADMAP section for planned changes.
 
 v0.3.3    2018-11-10 22:06:06+00:00 Europe/London
   [Bug Fix]
